# ezigzag

./: .gitignore  README.org  angle_conversion.ipynb  cfactors.py  newtonian_potential_from_map.ipynb  pyproject.toml
data/: download_jellyfish.sh  download_simpsons.sh  download_tng2D_subset.sh  download_xray.sh
ezigzag/: __init__.py  data.py  metrics.py  models.py  train.py  utils.py
slides/assets/scripts/ddpm/: scene1.py
slides/assets/scripts/vae/: scene1.py  scene2.py  scene3.py  scene4.py  scene5.py
text/: main.bib  main.tex
